--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
 
   <%= f.label :date_to %>:
   <%= f.date_select :date_to, placeholder: "default set to present day" %><br />
-  <%= f.submit "Get Data" %>
+  <%= f.submit "Get Data", :class => 'submit' %>
 <% end %>
 
 <hr>
