--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,8 +38,8 @@
           <td class="cell">
             <% if key == "Published" || key == "Crawled" %>
               <%= Time.parse(match[key]).strftime("%m-%d-%Y") %>
-            <% elsif key == "Url" %>
-              <a href=<%=match[key]%>>Visit URL</a>
+            <% elsif key == "SiteTitle" %>
+              <a href=<%= match["Url"] %> ><%= match["SiteTitle"] %></a>
             <% elsif key == "Subject" || key == "Text" %>
               <%= match[key].gsub('[Keyword]','\*K*/').gsub('[/Keyword]', '') %>
             <% else %>
